<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MenuActivity">


    <TextView

        android:paddingTop="12dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:textSize="26sp"
        android:text="@string/label_welcome"
        />

        <Button
            android:id="@+id/btnCreateAppointment"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/ic_add_circle"
            android:layout_width="match_parent"
            style="@style/MenuButton"
            android:text="@string/btn_create_appointment"
            />

        <Button
            android:id="@+id/btnMyAppointments"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/ic_schedule"
            android:layout_width="match_parent"
            style="@style/MenuButton"
            android:text="@string/label_my_appointments"
            />

        <Button
            android:id="@+id/btnLogout"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/ic_power_off"
            android:layout_width="match_parent"
            style="@style/MenuButton"
            android:text="@string/label_log_out"
            />

</LinearLayout>