<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:animateLayoutChanges="true"
    tools:context=".CreateAppointmentActivity">


    <TextView

        android:paddingTop="12dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:textSize="26sp"
        android:text="@string/label_create_appointment"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvStep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"

         >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/label_description"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/label_specialty"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinnerSpecialties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/label_type"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">
                <RadioButton

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type1"/>
                <RadioButton

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type2"/>
                <RadioButton

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type3"/>
            </RadioGroup>



            <Button
                android:id="@+id/btnNext"
                android:layout_marginTop="12dp"
                android:drawableEnd="@drawable/ic_navigate_next"
                android:layout_width="match_parent"
                style="@style/MenuButton"
                android:text="@string/btn_next"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvStep2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        android:visibility="gone"

        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/label_doctor"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spinnerDoctors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/label_scheduled_date"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etScheduledDate"
                    android:onClick="onClickScheduledDate"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/radioGroupLeft"
                        android:layout_marginBottom="8dp">
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/type1"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/type1"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/radioGroupRight"
                        android:layout_marginBottom="8dp">
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/type1"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/type1"/>

                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnConfirmAppointment"
                    android:layout_marginTop="12dp"
                    android:drawableEnd="@drawable/ic_check"
                    android:layout_width="match_parent"
                    style="@style/MenuButton"
                    android:text="@string/btn_nconfirm"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



    </androidx.cardview.widget.CardView>

</LinearLayout>